# backend/src/main/resources/openapi/openapi.yml
@@ -290,7 +290,6 @@ paths:
 
 #  /task:
 #  /task/{id}:
-#  /task/{id}/questions:
 
   /tasks:
     post:
@@ -351,12 +350,12 @@ paths:
         200:
           description: OK
 
-  /tasks/{id}/questions:
+  /tasks/{id}/answers:
     get:
       tags:
         - tasks
-      summary: вернуть все вопросы этого теста/задачи
-      operationId: getQuestionsByTaskId
+      summary: вернуть все ответы этого теста/задачи
+      operationId: getAnswersByTaskId
       parameters:
         - name: id
           in: path
@@ -373,11 +372,8 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/QuestionAllInfo"
+                  $ref: "#/components/schemas/AnswerAllInfo"
 
-#  /questions:
-#  /questions/{id}:
-#  /questions/{id}/answers:
 
 #  /statistics/courses:
 #  /statistics/courses/{id}:
@@ -503,13 +499,6 @@ components:
 
     CourseAllInfoResponseDto:
       type: object
-      required:
-        - id
-        - name
-        - description
-        - isPrivate
-        - cover
-        - status
       properties:
         id:
           type: integer
@@ -553,16 +542,9 @@ components:
           format: int64
         name:
           type: string
-        startDate:
-          type: string
-          format: date
-        duration:
-          type: integer
         courseId:
           type: integer
           format: int64
-        isPrivate:
-          type: boolean
         contentType:
           type: string
           enum:
@@ -574,11 +556,6 @@ components:
         teacher:
           type: integer
           format: int64
-        cover:
-          type: string
-        publicationDate:
-          type: string
-          format: date
         status:
           type: string
           enum:
@@ -597,19 +574,14 @@ components:
         lessonId:
           type: integer
           format: int64
-        deadline:
-          type: string
-          format: date-time
-        description:
-          type: string
         name:
           type: string
-        questions:
+        answers:
           type: array
           items:
             $ref: "#/components/schemas/SimpleResponseDto"
 
-    QuestionAllInfo:
+    AnswerAllInfo:
       type: object
       properties:
         id:
@@ -618,12 +590,8 @@ components:
         task_id:
           type: integer
           format: int64
-        questionText:
+        answerText:
           type: string
-        answers:
-          type: array
-          items:
-            $ref: "#/components/schemas/SimpleResponseDto"
 
     LessonsRequestDto:
       type: object
@@ -633,16 +601,9 @@ components:
           format: int64
         name:
           type: string
-        startDate:
-          type: string
-          format: date
-        duration:
-          type: integer
         courseId:
           type: integer
           format: int64
-        isPrivate:
-          type: boolean
         contentType:
           type: string
           enum:
@@ -654,8 +615,6 @@ components:
         teacher:
           type: integer
           format: int64
-        cover:
-          type: string
         status:
           type: string
           enum:
@@ -669,20 +628,13 @@ components:
       type: object
       required:
         - name
-        - description
-        - deadline
       properties:
         id:
           type: integer
           format: int64
         name:
           type: string
-        deadline:
-          type: string
-          format: date-time
-        description:
-          type: string
-        questions:
+        answers:
           type: array
           items:
             type: integer
